[tool.pdm]

[project]
name = "forseti-security"
version = "2.25.1"
description = "Forseti Security tools"
authors = [
    {name = "Google LLC.",email = "opensource@google.com"},
]
dependencies = [
    'anytree==2.4.3',
    'google-api-python-client==1.7.10',
    'google-auth==1.6.3',
    'google-auth-httplib2==0.0.3',
    'idna==2.8',
    'Jinja2==2.10.1',
    'jmespath==0.9.3',
    'netaddr==0.7.19',
    'pyyaml==4.2b4',
    'python-graph-core==1.8.2',
    'python-dateutil==2.7.5',
    'ratelimiter==1.2.0.post0',
    'retrying==1.3.3',
    'requests[security]==2.21.0',
    'sendgrid==5.6.0',
    'simple-crypt==4.1.7',
    'unicodecsv==0.14.1',
    'grpcio>=1.22.0',
    'grpcio-tools>=1.22.0',
    'protobuf==3.13.0',
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache 2.0"}
keywords = ["gcp google cloud platform security tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/forseti-security/forseti-security"

[project.optional-dependencies]
profiler = [
    "google-cloud-profiler==1.0.8",
]
mailjet = [
    "mailjet-rest==1.3.3",
]
endtoend_tests = [
    "google-cloud-storage==1.25.0",
    "pytest==5.3.3",
]

[project.scripts]
forseti = "google.cloud.forseti.stubs:RunForsetiCli"
forseti_enforcer = "google.cloud.forseti.stubs:RunForsetiEnforcer"
forseti_server = "google.cloud.forseti.stubs:RunForsetiServer"

[build-system]
requires = ["setuptools>=47.2.0"]
build-backend = "setuptools.build_meta"
